Amy: Fix Emmies mess which was worse than initially thought
